--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website title</title>
+    <title>EschatonY3K</title>
     <link rel="icon" href="tabicon.png">
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 
@@ -57,14 +57,14 @@ width:100%; height:100%; object-fit: fill; ">  </a>
 
  </div> 
 
- <marquee bgcolor="#e8e8e8" class="scrolla">message</marquee>
+ <marquee bgcolor="#e8e8e8" class="scrolla">A comic from the mind of Jazz Mousz</marquee>
 
      <div id="content">
       
   <div id="welcome">
      <!-- Fill in text here -->  
-  <h1> welcome to my site! </h1>
-  <p class="maintext"> here is information! blah blah blah blah blah blah blah blah blah blah blah blah.. </p>
+  <h1> When Humanity is on the brink of destruction. The Rebis Walks the Earth</h1>
+  <p class="maintext"> Your desire is the father of the God, your self is the mother of the God, but the son is the new God, your master. - Carl Jung </p>
   
   </div>
 
