--- a/Contact.html
+++ b/Contact.html
@@ -10,5 +10,6 @@
   <body>
 <h1>Contact Page</h1>
 <p class="p-welcome" >When the World ends the Saviour is born.</p.>
+    <a href=>"contact.html"</a>
 </body>
 </html>
