--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ width:100%; height:100%; object-fit: fill; ">  </a>
   
   </div>
 
+	     <img src="testpic.jpg" alt="This is a test image" height="42" width="42">
     
   <div id="announcements">
   <div class="text-container">
